# socket

./: .gitignore  README.md  socket.sln
socket/: client.c  mnet.h  socket.vcxproj.filters  tcp.c
socket-linux/linux/: .echo.sh.swp  CMakeLists.txt  echo.sh  echocli.sh  echoser.sh  m_net.h
socket-linux/linux/MUXser/: ser.c
socket-linux/linux/cli/: CMakeLists.txt  cli.c
socket-linux/linux/epollserET/: ser.c
socket-linux/linux/epollserLT/: CMakeLists.txt  ser.c
socket-linux/linux/plainser/: ser.c
socket-linux/linux/selectser/: ser.c
socket-linux/linux/ser/: ser.c
socket-linux/linux/ser1/: ser.c
socket-windows/: client.c  socket.vcxproj  tcp.c
