PROJECT(ECHO)
ADD_SUBDIRECTORY(ser bin)
ADD_SUBDIRECTORY(cli bin)
INSTALL (FILES README DESTINATION share/doc/cmake/)
INSTALL(PROGRAMS runecho.sh DESTINATION bin)
INSTALL(DIRECTORY doc/ DESTINATION share/doc/cmake)
MESSAGE(STATUS"This is Binary dir" ${ECHO_BINARY_DIR})

MESSAGE(STATUS"This is SOURCE_dir" ${ECHO_SOURCE_DIR})
